--- a/app.css
+++ b/app.css
@@ -15,3 +15,16 @@ section {
     justify-content: center;
     flex-wrap: wrap;
 }
+
+#reset {
+    color: red;
+}
+
+
+#reset:hover {
+    color: red;
+    border: 1px solid black;
+    border-radius: 10%;
+    box-shadow: 3px 1px 1px red;
+}
+
